--- a/package.json
+++ b/package.json
@@ -3,26 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
-    "fibers": "^4.0.2",
+    "fibers": "^5.0.0",
     "jquery": "^3.4.1",
-    "node-sass": "^4.13.0",
-    "react": "^16.12.0",
+    "node-sass": "^4.14.1",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.x",
+    "react-scripts": "^4.0.2",
     "sass": "^1.23.7",
-    "typescript": "^3.7.3"
+    "typescript": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
